<resources>
    <string name="app_name">WNLINE</string>

    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="config_sync_error">Can not receive configuration</string>
    <string name="wrong_device">Your device does not meet the requirements</string>
    <string name="finish">Finish</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="min">%1$dmin</string>
    <string name="start_date">%1$s at %2$s</string>
    <string name="timer">%1$dm\n%2$ds\n%3$dms</string>
    <string name="workout">Workout</string>
    <string name="workouts">Workouts</string>

    <string-array name="workout_names">
        <item>Running</item>
        <item>Cycling</item>
    </string-array>
</resources>